--- a/week 6/piggymetrics-master/piggymetrics-master/enrollment-service/pom.xml
+++ b/week 6/piggymetrics-master/piggymetrics-master/enrollment-service/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.5.8</version>
+        </dependency>
     </dependencies>
 
     <build>
